--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Mood Tracker</title>
 </head>
-<body>
+<body class="white-bg">
   <div class="container">
     <div class="wrapper">
       <div class="header">
