--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <title>Mood Tracker</title>
+  <title>Mood Circle</title>
 </head>
 <body class="white-bg">
   <div class="container">
@@ -27,7 +27,7 @@
           <input type="text" placeholder="What's your name?" maxlength="15" required>
         </form>
         <div class="user-name"></div>
-        <div class="share hidden"><span>SHARE</span></div>
+        <div class="share hidden"><span>Share</span></div>
       </div>
 
       <div class="mood-wrapper">
