--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="mood-slc-wrapper close">
         <span class="title">How was your day?</span>
-        <div class="txt-score">Rate your mood :</div>
+        <div class="txt-score">Rate your mood for today :</div>
         <div class="mood-slc">
           <div class="btn-mood-slc" data-score="1"><span>1</span></div>
           <div class="btn-mood-slc" data-score="2"><span>2</span></div>
@@ -72,9 +72,9 @@
 
       <div class="date-picker-wrapper close">
         <div class="date-picker-year">
-          <div class="year-prev"></div>
+          <div class="year-prev inactive"></div>
           <span></span>
-          <div class="year-next"></div>
+          <div class="year-next inactive"></div>
         </div>
         <div class="date-picker-month">
           <div class="month-circle" data-status="empty" data-month="1"><span>1</span></div>
