--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         <div class="header-btns">
           <div class="toggle-date"><span></span></div>
           <div class="share"><span>Share</span></div>
+          <div class="question"><span>?</span></div>
+        </div>
+        <div class="question-wrapper hidden">
+          <b>Mood Circle 변경하기</b><br><p>하루 전날의 기분 점수만 변경할 수 있습니다. 수정하고 싶은 동그라미를 탭 해보세요.</p>
+          <b>Modify the Mood Circle</b><br><p>You can only modify the mood score of 1 day ago from now. Tap the circle you want to modify.</p>
+          <b>주의사항</b><p>‘Mood Circle’의 데이터는 사용자의 웹 브라우저에 저장됩니다. 웹 브라우저 기록 삭제 시 저장된 정보가 초기화됩니다.</p>
+          <b>Caution</b><br><p>The data of ‘Mood Circle’ is stored on a user's browser. Please note that the stored data is initialized when clearing browser history.</p>
         </div>
       </div>
 
