--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input type="text" placeholder="What's your name?" maxlength="15" required>
         </form>
         <div class="user-name"></div>
-        <div class="share hidden"><span>TWITTER ↗</span></div>
+        <div class="share hidden"><span>SHARE</span></div>
       </div>
 
       <div class="mood-wrapper">
@@ -36,9 +36,21 @@
       <div class="footer">
         <div class="main-text">
           <div class="month"></div>
-          <div class="app-name"><span>Mood</span><br><span>Tracker</span></div>
+          <div class="app-name">
+            <span class="bubble tail-left theme-bubble">
+              <span class="bubble-text">Tap to toggle theme :)</span>
+              <i class="bubble-tail"><svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 0.516602C0 9.06769 3.26836 15.9997 13.7618 15.9997L14 16.0005C13.0623 15.2567 12.2689 14.3944 11.6314 13.4229C10.4112 11.5638 10 9.73924 10 5.406V0.516602H0Z" fill="#000"></path></svg></i>
+            </span>
+            <span>Mood</span><br><span>Circle</span>
+          </div>
         </div>
-        <div class="btn-mood hidden"><span>+</span></div>
+        <div class="btn-mood hidden">
+          <span class="bubble tail-right toast">
+            <span class="bubble-text">Rate your mood today</span>
+            <i class="bubble-tail"><svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 0.516602C0 9.06769 3.26836 15.9997 13.7618 15.9997L14 16.0005C13.0623 15.2567 12.2689 14.3944 11.6314 13.4229C10.4112 11.5638 10 9.73924 10 5.406V0.516602H0Z" fill="#000"></path></svg></i>
+          </span>
+          <span>+</span>
+        </div>
       </div>
 
       <div class="mood-slc-wrapper close">
