--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <div class="mood-slc-wrapper open">
+      <div class="mood-slc-wrapper close">
         <span class="title">How was your day?</span>
         <div class="txt-score">Rate your mood for today :</div>
         <div class="mood-slc">
